fix: Align ToolbarItem content to center

--- a/src/Playroom/ToolbarItem/ToolbarItem.less
+++ b/src/Playroom/ToolbarItem/ToolbarItem.less
@@ -18,6 +18,7 @@
   appearance: none;
   outline: none;
   display: flex;
+  align-items: center;
   justify-content: center;
   color: currentColor;
   cursor: pointer;
